--- a/GiftForGood/views/client/recipient-information.ejs
+++ b/GiftForGood/views/client/recipient-information.ejs
@@ -88,7 +88,19 @@
                     <div class="step_buttons_area">
                         <ul>
                             <li>
-                                <a href="#"><img src="/resources/images/icons/question.png"/> <span>Help</span></a>
+                                <div class="preview_here">
+                                    <a><img src="/resources/images/icons/question.png"/> <span style="border: none; color: #7B7B7B !important;">Help</span></a>
+                                    <div class="preview_hover_view">
+                                        <p class="mobile_none">
+                                            Import contact information from file. File type should be csv format. You can see the example csv file on the left link.
+                                        </p>
+                                        <h5 class="mobile_none">Scelerisque aleget aenean..</h5>
+                                        <p class="desktop_none">
+                                            Import contact information from file. File type should be csv format. You can see the example csv file on the left link.
+                                        </p>
+                                        <h5 class="desktop_none"><span>Show more</span></h5>
+                                    </div>
+                                </div>
                             </li>
                             <li>
                                 <button type="button" class="btn common_btn nextstep_btn">NEXT</button>
@@ -164,7 +176,7 @@
                 <div class="col-md-6">
                     <div class="step_buttons_area">
                         <ul>
-                            <li>
+                            <li style="display: none;">
                                 <a href="#"><img src="/resources/images/icons/add-small.png"/> <span>ADD SECOND CONTACT</span></a>
                             </li>
                             <li>
