--- a/GiftForGood/views/partials/footer.ejs
+++ b/GiftForGood/views/partials/footer.ejs
@@ -46,7 +46,7 @@
                 <div class="col-4">
                     <div class="admin_footer_logo">
                         <a href="#">
-                            <img src="/resources/images/logo.png"/>
+                            <img src="/resources/images/logo.svg"/>
                         </a>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
             <div class="row flex-row">
                 <div class="col mobile_100">
                     <div class="details_footer_item_1">
-                        <img src="/resources/images/logo.png" alt="logo"/>
+                        <img src="/resources/images/logo.svg" alt="logo"/>
                         <ul>
                             <li>
                                 <a href="#">hello@giftsforgood.com</a>
