--- a/GiftForGood/views/partials/head.ejs
+++ b/GiftForGood/views/partials/head.ejs
@@ -2,8 +2,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Gift for Food</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/resources/images/logo-g.png">
+    <title>Gifts for Good</title>
+
+    <link rel="shortcut icon" href="//cdn.shopify.com/s/files/1/1826/6559/t/39/assets/favicon.ico?v=16356079263907087773" type="image/png" />
+    <!--<meta name="google-site-verification" content="ZZTrOjJJMpppd2QIA9uPwd9tBo-xnwRmQcnsOFRlwyk" />-->
+    <meta name="google-site-verification" content="-vVPSpOBoRtr2tB5QCyDN_hNa8WlTf2LJ8AbG4sy3bM" />
+    <link rel="apple-touch-icon" href="//cdn.shopify.com/s/files/1/1826/6559/t/39/assets/apple-touch-icon.png?v=12870369883046899446" sizes="180x180">
+    <link rel="icon" type="image/png" href="//cdn.shopify.com/s/files/1/1826/6559/t/39/assets/favicon-32x32.png?v=7112285418742386527" sizes="32x32">
+    <link rel="icon" type="image/png" href="//cdn.shopify.com/s/files/1/1826/6559/t/39/assets/favicon-16x16.png?v=2553693186377795305" sizes="16x16">
+    <link rel="mask-icon" href="//cdn.shopify.com/s/files/1/1826/6559/t/39/assets/safari-pinned-tab.svg?v=6282356742563039192" color="#5bbad5">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/resources/css/bootstrap.min.css">
