--- a/GiftForGood/views/partials/sidebar.ejs
+++ b/GiftForGood/views/partials/sidebar.ejs
@@ -2,7 +2,7 @@
 
     <div class="sitebar_logo">
         <a href="#">
-            <img src="/resources/images/logo.png"/>
+            <img src="/resources/images/logo.svg"/>
         </a>
     </div>
 
@@ -24,14 +24,16 @@
     </div>
 
     <div class="sitebar_btn">
-        <button type="button" class="btn common_btn" id="create-collection"><a href="/step1" style="color: #333" target="_blank">+ CREATE COLLECTION</a></button>
+        <a href="/step1" target="_blank">
+            <button type="button" class="btn common_btn" id="create-collection">+ CREATE COLLECTION</button>
+        </a>
     </div>
 
     <div class="sitebar_setting">
         <ul>
-            <li>
-                <a  href="#"><img src="/resources/images/icons/setting.png" alt="icon"/>Settings</a>
-            </li>
+<!--            <li>-->
+<!--                <a  href="#"><img src="/resources/images/icons/setting.png" alt="icon"/>Settings</a>-->
+<!--            </li>-->
             <li>
                 <a  href="/logout"><img src="/resources/images/icons/logout.png" alt="icon"/>Logout</a>
             </li>
