--- a/GiftForGood/views/client/client-register.ejs
+++ b/GiftForGood/views/client/client-register.ejs
@@ -34,7 +34,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group email_input">
                                         <label for="email">EMAIL</label>
-                                        <input type="email" class="form-control" id="email" placeholder="thomas.stary@name.com">
+                                        <input type="email" class="form-control" id="email" placeholder="your@name.com">
                                     </div>
                                 </div>
                                 <div class="col-md-12">
